# Elena-Game-Engine

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.py  elena_create_project.py  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  wsgi.py
.github/workflows/: draft-pdf.yml
elena/: elena.py
elena/static/css/: elena.css
elena/templates/: elena.js
paper/: paper.bib  paper.md
src/elena/: __init__.py  elena.py
src/elena/templates/: elena.css  elena.js  elena_top.js  index.html  jsglobals.js  subjs.js
src/example/: app.py  requirements.txt  test.py
src/example/static/css/: elena.css
src/example/static/html/: Temperature_Controller_Part_I_lab_manual.html
src/example/static/js/: elena_top.js
src/example/static/js/games/: ArtGen0.js  Bacterial Culture_elena.js  Bacterial_Culture_js_globals.js  Bacterial_Culture_subjs.js  Experiment0.js  Temperature Controller Part II_elena.js  Temperature Controller Part I_elena.js  Temperature_Controller_Part_II_js_globals.js  Temperature_Controller_Part_II_subjs.js  Temperature_Controller_Part_I_js_globals.js  (+1 more)
src/example/static/ml/: transformer.py
src/example/static/questions/: Bacterial_Culture_trivia.json  Temperature_Controller_Part_II_trivia.json  bonus_round.json
src/example/templates/: elena.css  elena.js  elena_top.js  index.html  jsglobals.js
static/css/: elena.css
static/html/: Bacterial_Culture_lab_manual.html  Temperature_Controller_Part_II_lab_manual.html
static/js/games/: Bacterial Culture_elena.js  Experiment0.js  Temperature Controller Part I_elena.js
static/ml/: license.md  stylize.py
static/questions/: Temperature_Controller_Part_I_trivia.json  bonus_round.csv
templates/: index.html
