[metadata]
name = elena-game-engine
version = 0.0.1
author = Roman Parise and Georgios Is. Detorakis
description = elena Trivia Webapp Generator
url = https://github.com/thejackal360/Elena-Game-Engine
project_urls =
    Bug Tracker = https://github.com/thejackal360/Elena-Game-Engine/issues

[options]
python_requires = >= python3.10
install_requires =
    torch==1.13.0
    torchvision==0.11.1+cpu
    torchaudio==0.10.0+cpu
    matplotlib==3.3.4
    flask==2.0.0
    gunicorn
